--- a/master/common.yaml
+++ b/master/common.yaml
@@ -2,8 +2,8 @@ jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
 
-master::ip: 192.168.0.114:8080
-repo::ip: 192.168.0.114
+# master::ip: 54.67.30.249
+# repo::ip: 54.67.51.1
 
 user::admin::name: admin
 
