--- a/slave/common.yaml
+++ b/slave/common.yaml
@@ -3,7 +3,7 @@ jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
 jenkins::slave::num_executors: 2
 
-# master::ip: 54.67.30.249
+master::ip: 192.168.0.114
 # repo::ip: 54.67.51.1
 
 ssh_keys:
